# rust_ecom

./: Cargo.toml  README.md  build.rs
migrations/: 0001_admins_table.sql  0002_users_table.sql  0003_products_table.sql  0004_orders_table.sql
proto/: rust_ecom.proto
src/: client.rs  main.rs  server.rs
